2011-12-12  Vladimir Makarov  <vmakarov@redhat.com>

PR rtl-optimization/21617
	* ira-color.c (bucket_allocno_compare_func): Don't compare
	allocno classes.  Compare number of hard registers needed.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182263 138bc75d-0d04-0410-961f-82ee72b054a4